goreleaser multi-arch Docker builds

--- a/chart/templates/daemonset.yaml
+++ b/chart/templates/daemonset.yaml
@@ -44,9 +44,15 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+          {{- range $name, $spec := $.Values.volumes }}
+            - name: {{ $name }}
+              mountPath: {{ $spec.mountPath }}
+          {{- end -}}
         {{- with .Values.extraContainers }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
+      hostNetwork: true
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -59,3 +65,8 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+      {{- range $name, $spec := $.Values.volumes }}
+        - name: {{ $name }}
+          {{- toYaml (omit $spec "mountPath") | nindent 10 }}
+      {{ end -}}
