--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,31 +1,63 @@
-name: goreleaser
+# This is an example .goreleaser.yml file with some sensible defaults.
+# Make sure to check the documentation at https://goreleaser.com
+before:
+  hooks:
+    # You may remove this if you don't use go modules.
+    - go mod tidy
+    # you may remove this if you don't need go generate
+    - go generate ./...
+builds:
+  - env:
+      - CGO_ENABLED=0
+    binary: tailscale-node-controller
+    goos:
+      - linux
+    goarch:
+      - amd64
+      - 386
+      - arm64
+      - arm
+archives:
+  - replacements:
+      linux: Linux
+      386: i386
+      amd64: x86_64
+checksum:
+  name_template: 'checksums.txt'
+snapshot:
+  name_template: "{{ incpatch .Version }}-next"
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - '^docs:'
+      - '^test:'
+dockers:
+  - image_templates:
+      - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-amd64"
+    dockerfile: Dockerfile
+    build_flag_templates:
+      - "--platform=linux/amd64"
+  - image_templates:
+      - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-arm64v8"
+    goarch: arm64
+    dockerfile: Dockerfile
+    build_flag_templates:
+      - "--platform=linux/arm64/v8"
+  - image_templates:
+      - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-armv6"
+    goarch: arm
+    goarm: 6
+    dockerfile: Dockerfile
+    build_flag_templates:
+      - "--platform=linux/arm/v6"
+docker_manifests:
+  - name_template: ghcr.io/samcday/tailscale-node-controller:{{ .Version }}
+    image_templates:
+      - ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-amd64
+      - ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-arm64v8
+      - ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-armv6
 
-on:
-  push:
-    branches: [main]
-    tags:
-      - '*'
-
-permissions:
-  contents: write
-  packages: write
-
-jobs:
-  goreleaser:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - run: git fetch --force --tags
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '>=1.19.2'
-          cache: true
-      - uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# modelines, feel free to remove those if you don't want/use them:
+# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
+# vim: set ts=2 sw=2 tw=0 fo=cnqoj
