--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -36,12 +36,14 @@ dockers:
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-amd64"
     dockerfile: Dockerfile
+    use: buildx
     build_flag_templates:
       - "--platform=linux/amd64"
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-arm64v8"
     goarch: arm64
     dockerfile: Dockerfile
+    use: buildx
     build_flag_templates:
       - "--platform=linux/arm64/v8"
   - image_templates:
@@ -49,6 +51,7 @@ dockers:
     goarch: arm
     goarm: 6
     dockerfile: Dockerfile
+    use: buildx
     build_flag_templates:
       - "--platform=linux/arm/v6"
 docker_manifests:
