--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -39,6 +39,7 @@ dockers:
     use: buildx
     build_flag_templates:
       - "--platform=linux/amd64"
+    skip_push: false
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-arm64v8"
     goarch: arm64
@@ -46,6 +47,7 @@ dockers:
     use: buildx
     build_flag_templates:
       - "--platform=linux/arm64/v8"
+    skip_push: false
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-armv6"
     goarch: arm
@@ -54,6 +56,7 @@ dockers:
     use: buildx
     build_flag_templates:
       - "--platform=linux/arm/v6"
+    skip_push: false
 docker_manifests:
   - name_template: ghcr.io/samcday/tailscale-node-controller:{{ .Version }}
     image_templates:
