--- a/.github/workflows/goreleaser-snapshot.yaml
+++ b/.github/workflows/goreleaser-snapshot.yaml
@@ -1,9 +1,8 @@
-name: goreleaser
+name: goreleaser-snapshot
 
 on:
   push:
-    tags:
-      - '*'
+    branches: [main]
 
 permissions:
   contents: write
@@ -25,6 +24,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist
+          args: release --rm-dist --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
