--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -36,24 +36,18 @@ dockers:
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-amd64"
     dockerfile: Dockerfile
-    build_flag_templates:
-      - "--platform=linux/amd64"
-    skip_push: false
+    build_flag_templates: ["--platform=linux/amd64"]
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-arm64v8"
     goarch: arm64
     dockerfile: Dockerfile
-    build_flag_templates:
-      - "--platform=linux/arm64/v8"
-    skip_push: false
+    build_flag_templates: ["--platform=linux/arm64/v8"]
   - image_templates:
       - "ghcr.io/samcday/tailscale-node-controller:{{ .Version }}-armv6"
     goarch: arm
     goarm: 6
     dockerfile: Dockerfile
-    build_flag_templates:
-      - "--platform=linux/arm/v6"
-    skip_push: false
+    build_flag_templates: ["--platform=linux/arm/v6"]
 docker_manifests:
   - name_template: ghcr.io/samcday/tailscale-node-controller:{{ .Version }}
     image_templates:
