--- a/chart/templates/rbac.yaml
+++ b/chart/templates/rbac.yaml
@@ -9,6 +9,9 @@ rules:
   - apiGroups: [""]
     resources: [nodes]
     verbs: [get, watch, list]
+  - apiGroups: [""]
+    resources: [events]
+    verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
