--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -6,7 +6,7 @@ image:
   repository: ghcr.io/samcday/tailscale-node-controller
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: main
+  # tag:
 
 imagePullSecrets: []
 nameOverride: ""
@@ -57,6 +57,15 @@ tolerations:
 affinity: {}
 
 extraContainers: []
+
+env:
+  HEALTH_BIND_ADDR:
+    value: ":8081"
+  NODE_NAME:
+    valueFrom:
+      fieldRef:
+        fieldPath: spec.nodeName
+envFrom: []
 
 volumes:
   tailscaled-socket:
