--- a/.github/workflows/goreleaser-snapshot.yaml
+++ b/.github/workflows/goreleaser-snapshot.yaml
@@ -22,11 +22,11 @@ jobs:
           cache: true
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: Log into registry ghcr.io
         if: github.event_name != 'pull_request'
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: goreleaser/goreleaser-action@v2
