--- a/chart/templates/rbac.yaml
+++ b/chart/templates/rbac.yaml
@@ -8,7 +8,10 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: [nodes]
-    verbs: [get, watch, list]
+    verbs: [get, watch, list, patch]
+  - apiGroups: [""]
+    resources: [nodes/status]
+    verbs: [patch]
   - apiGroups: [""]
     resources: [events]
     verbs: ["*"]
