--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,6 +7,9 @@ build:
     - image: ghcr.io/samcday/tailscale-node-controller
       docker:
         dockerfile: Dockerfile
+      platforms:
+        - linux/amd64
+        - linux/arm64
   local:
     useBuildkit: true
 deploy:
