--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: Skaffold Github Action
         uses: hiberbee/github-action-skaffold@1.27.0
         with:
+          skaffold-version: 2.6.3
           command: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
