--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -19,6 +19,8 @@ jobs:
       - run: git fetch --force --tags
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Log into registry ghcr.io
         if: github.event_name != 'pull_request'
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
