--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -35,3 +35,5 @@ jobs:
           command: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run:
+          git diff
