--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -5,7 +5,7 @@
 image:
   repository: ghcr.io/samcday/tailscale-node-controller
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
+  # Overrides the image tag whose default is the chart version.
   # tag:
 
 imagePullSecrets: []
